; ModuleID = '/home/carl/AnghaBench/vlc/src/darwin/extr_thread.c_vlc_trace.c'
source_filename = "/home/carl/AnghaBench/vlc/src/darwin/extr_thread.c_vlc_trace.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@stderr = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [16 x i8] c"at %s:%u in %s\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @vlc_trace(i8* %0, i8* %1, i32 %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  %7 = alloca [20 x i8*], align 16
  %8 = alloca i32, align 4
  store i8* %0, i8** %4, align 8
  store i8* %1, i8** %5, align 8
  store i32 %2, i32* %6, align 4
  %9 = load i32, i32* @stderr, align 4
  %10 = load i8*, i8** %5, align 8
  %11 = load i32, i32* %6, align 4
  %12 = load i8*, i8** %4, align 8
  %13 = call i32 @fprintf(i32 %9, i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str, i64 0, i64 0), i8* %10, i32 %11, i8* %12)
  %14 = load i32, i32* @stderr, align 4
  %15 = call i32 @fflush(i32 %14)
  %16 = getelementptr inbounds [20 x i8*], [20 x i8*]* %7, i64 0, i64 0
  %17 = call i32 @backtrace(i8** %16, i32 20)
  store i32 %17, i32* %8, align 4
  %18 = getelementptr inbounds [20 x i8*], [20 x i8*]* %7, i64 0, i64 0
  %19 = load i32, i32* %8, align 4
  %20 = call i32 @backtrace_symbols_fd(i8** %18, i32 %19, i32 2)
  %21 = call i32 @fsync(i32 2)
  ret void
}

declare dso_local i32 @fprintf(i32, i8*, i8*, i32, i8*) #1

declare dso_local i32 @fflush(i32) #1

declare dso_local i32 @backtrace(i8**, i32) #1

declare dso_local i32 @backtrace_symbols_fd(i8**, i32, i32) #1

declare dso_local i32 @fsync(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
